--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,6 @@
         "jquery": "2.1.4",
         "outdated-browser": "1.1.3",
         "respond": "1.4.2",
-        "select2-bootstrap": "1.3.0",
+        "select2-bootstrap": "1.3.0"
     }
 }
